--- a/apps/invoice/templates/ticket.html
+++ b/apps/invoice/templates/ticket.html
@@ -91,17 +91,26 @@
       </tbody>
     </table>
 
-    <div style="padding: 2px 10px; margin: 0;">
+    <div style="padding: 2px 5px; margin: 0;">
       <div class="subtitle">Concepto(s)</div>
       <table style="border-collapse: collapse;">
-        <tbody>
+        <tbody style="font-size: 12px;">
           <tr>
             <td style="width: 160px;">Servicio de Agua</td>
-            <td style="width: 50px;">0.5</td>
-            <td>
-              <span class="bold">{{ body.total }}</span>
-            </td>
+            <td style="text-align: center; width: 40px;">{{ body.consumed }}</td>
+            <td style="text-align: center; width: 40px;">{{ body.price }}</td>
+            <td style="text-align: center; font-weight: bold;"> {{ body.subtotal }} </td>
           </tr>
+          
+          {% for detail in details %}
+          <tr>
+            <td style="width: 160px;">{{ detail.description }}</td>
+            <td style="text-align: center; width: 40px;">{{ detail.quantity }}</td>
+            <td style="text-align: center; width: 40px;">{{ detail.price }}</td>
+            <td style="text-align: center; font-weight: bold;"> {{ detail.subtotal }} </td>
+          </tr>
+          {% endfor %}
+            
         </tbody>
       </table>
     </div>
@@ -111,9 +120,7 @@
         <tbody>
           <tr>
             <td style="width: 200px; font-weight: bold;">TOTAL A PAGAR</td>
-            <td>
-              <span class="bold">{{ body.total }}</span>
-            </td>
+            <td style="font-weight: bold;"> {{ body.total }} </td>
           </tr>
         </tbody>
       </table>
