test report invoices 3

--- a/apps/invoice/templates/invoices.html
+++ b/apps/invoice/templates/invoices.html
@@ -69,7 +69,7 @@
             {{ invoice.status_description }}
           </td>
           <td style="vertical-align: middle; padding: 3px 0px 0 0; text-align: center;">
-            {{ invoice.observations }}
+            {{ invoice.observations }}{{ invoice.details }}
           </td>
         </tr>
         {% endfor %}
